<resources>
    <string name="app_name">Vision Guardian</string>
    <string name="registration">Registration</string>
    <string name="exam">Examination</string>
    <string name="referral">Referral</string>
    <string name="awarness">Awareness</string>
    <string name="scheme">Scheme</string>
    <string name="eyecare">Eyecare</string>
    <string name="hint_password">Password*</string>
    <string name="hint_email">Username*</string>
    <string name="login">Login</string>
    <string name="email">User Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">New User Registration</string>
    <string name="submit">Submit</string>
    <string name="hint_age">Age</string>
    <string name="hint_Address">Address line 1</string>
    <string name="hint_firstname">First name *</string>
    <string name="hint_middal">Middle name</string>
    <string name="hint_last">Last name * </string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_address2">Address line 2</string>
    <string name="hint_pin">"Pin code *"</string>
    <string name="hint_city">Village/City *</string>
    <string name="hint_dis">"District * "</string>
    <string name="hint_state">State</string>
    <string name="hint_mobile">Mobile number*</string>
    <string name="hint_Email">Email</string>
    <string name="hintEducation">Education</string>
    <string name="hint_Designation">"Designation    "</string>
    <string name="hint_Role">"Role "</string>
    <string name="question1">1.	Do you have blurry vision for distance? If yes in which eye?</string>
    <string name="question1_choice1">Yes</string>
    <string name="question1_choice2">No</string>
    <string name="question2">2.	Do you have difficulty in reading ordinary print in newspapers or during near work? If yes in which eye?</string>
    <string name="question3">3.	Do you have redness, pain, tears, discharge or uncomfortable eyes?</string>
    <string name="question3_choice1">Yes – Redness/Pain/Tearing/Discharge/ uncomfortable eyes</string>
    <string name="question4">4. Do you have any other difficulties in your eyes? "</string>
    <string name="question4_choice1">Black spots in front of the eye</string>
    <string name="question4_choice2">Growth on the eye</string>
    <string name="question4_choice3">Swelling on the eyelid</string>
    <string name="question4_choice4">Itching/irritation</string>
    <string name="question4_choice5">Eyestrain</string>
    <string name="question4_choice6">Headache </string>
    <string name="question4_choice7">Light sensitivity </string>
    <string name="question4_choice8">Flashes</string>
    <string name="question4_choice9">White scales on the lid margin</string>
    <string name="question4_choice10">Deviation of eyes</string>
    <string name="question4_choice11">Foreign body sensation</string>
    <string name="question4_choice12">"Dryness "</string>
    <string name="question4_choice13">Coloured halos around light</string>
    <string name="question4_choice14">"Glare "</string>
    <string name="question4_choice15">"Double vision "</string>
    <string name="question4_choice16">Nil</string>
    <string name="question5">5. Do you have difficulty in both eyes? If no in which eye do you have difficulty?</string>
    <string name="question5_choice1">"Right eye "</string>
    <string name="question5_choice2">"Left eye "</string>
    <string name="question5_choice3">"Both eye "</string>
    <string name="submit_answers">Submit</string>
    <string name="question6">"6. When did the problems(s) begin? "</string>
    <string name="question7">7. How was the onset of symptoms? Was it sudden or gradual?</string>
    <string name="question7_choice1">Gradual </string>
    <string name="question7_choice2">Sudden</string>
    <string name="question8">8. How often do you experience the above symptoms?</string>
    <string name="question8_choice1">"Occasionally "</string>
    <string name="question8_choice2">"Frequently "</string>
    <string name="question8_choice3">"Constantly "</string>
    <string name="question9">5. Are you wearing spectacles for distance or near? If yes do you have difficulty in seeing clearly with your glasses?</string>
    <string name="question9_choice1">Yes, Have difficulty with glasses</string>
    <string name="question9_choice2">Yes, No difficulty with glasses</string>
    <string name="question9_choice3">Not wearing glasses</string>
    <string name="question10">6. Do you have any past history of eye surgeries, eye injuries or eye treatment? </string>
    <string name="question10_choice1">Cataract surgery</string>
    <string name="question10_choice2">Retinal surgery</string>
    <string name="question10_choice3">glaucoma treatment</string>
    <string name="question10_choice4">Eye injuries</string>
    <string name="question10_choice5">Other</string>
    <string name="question10_choice6">Laser treatment</string>
    <string name="question11">7. Are you taking medication for systemic illness?</string>
    <string name="question11_choice1">Diabetes</string>
    <string name="question11_choice2">Hypertension</string>
    <string name="question11_choice3">Asthma</string>
    <string name="question11_choice4">Thyroid</string>
    <string name="question11_choice5">"Seizure "</string>
    <string name="question11_choice6">"Allergy "</string>
    <string name="question11_choice7">Arthritis</string>
    <string name="question11_choice8">"Others "</string>
    <string name="question11_choice9">Nil</string>
    <string name="question12">8. Any of your first degree relatives experienced ocular problem?(Father/Mother/Siblings/Aunt/Uncle)</string>
    <string name="question12_choice1">Yes</string>
    <string name="question12_choice2">No</string>
    <string name="submit_next">Next</string>
    <string name="vs1">1.Distance vision without glasses </string>
    <string name="vs_right">Right Eye</string>
    <string name="vs_left">Left eye</string>
    <string name="distance_vision1">"Less than 3/60"</string>
    <string name="distance_vision2">"Less than 6/60, more than 3/60"</string>
    <string name="distance_vision3">"More than 6/60, less than 6/18"</string>
    <string name="distance_vision4">"More than 6/18"</string>
    <string name="vs2">2. Distance vision with glasses </string>
    <string name="vs3">3. Near vision without glasses</string>
    <string name="near_vision1">Can not see N6</string>
    <string name="near_vision2">Can see N6</string>
    <string name="vs4">4. Near vision with glasses</string>
    <string name="vs5">5. Category of visual impairment</string>
    <string name="cat_imp1">Mild visual impairment</string>
    <string name="cat_imp2">Moderate visual impairment</string>
    <string name="cat_imp3">Severe visual impairment</string>
    <string name="cat_imp4">Blindness</string>
    <string name="cat_imp5">Near vision impairment</string>
    <string name="title1">HISTORY TAKING QUESTIONNAIRE</string>
    <string name="title2">VISION SCREENING</string>
    <string name="refraction1">Sphere</string>
    <string name="refraction2">Cylinder </string>
    <string name="lessthan"><![CDATA[< 1.00D]]></string>
    <string name="greterthan"><![CDATA[>1.00D]]></string>
    <string name="refraction3">Axis range </string>
    <string name="title3">TORCHLIGHT EXAMINATION</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="cataract_cataracts">"Cataract is commonly seen in people above 40 years."</string>
    <string name="cataract_cataracts1">"Children may also develop the cataract."</string>
    <string name="cataract_cataract2">"People with diabetes or those taking high doses of steroid medications are also at high risk  "</string>
    <string name="symptoms_cataract">What are the symptoms of the cataract?</string>
    <string name="symptoms_cataracts">"●\tBlurring of vision. "</string>
    <string name="symptoms_cataracts1">"If left untreated, the patient may turn blind gradually. "</string>
    <string name="symptoms_cataracts2">"Other possible symptoms are the presence of bright circles around the light, glare, difficulty in the night driving, light seem too dim for reading. "</string>
    <string name="treatment_cataract">"What is the treatment for Cataract ? "</string>
    <string name="treatment_cataract_p1">"The only treatment for cataract is surgery.  "</string>
    <string name="treatment_cataract_p12">"In early stages vision may improve with glasses."</string>
    <string name="treatment_cataract_p13">"In cataract surgery, eye surgeons will remove the cloudy lens and place an artificial lens in the exact position of the original lens. "</string>
    <string name="treatment_cataract_p14">"Cataract surgeries are simple, quick, painless, and suture less procedures.  "</string>
    <string name="treatment_cataract_p15">"The patient can go for surgery when cataract starts affecting their lifestyle.  "</string>
    <string name="refractive_error1">"Myopia or Near-sightedness- In myopia, there will be difficulty in seeing distant objects.  Myopia is usually inherited. "</string>
    <string name="refractive_error2">"Hyperopia or Long Sightedness- In hyperopia there will be difficulty in seeing near objects.  "</string>
    <string name="refractive_error3">"Astigmatism results in distorted vision due to an irregularly curved cornea. (the clear structure covering the eyeball).  "</string>
    <string name="refractive_error4">"Presbyopia is linked to aging and can result in blurring of near vision   "</string>
    <string name="symptoms_refractive">What are the symptoms?</string>
    <string name="symptoms_rf_error1">"Blurring of vision.  "</string>
    <string name="symptoms_rf_error2">"Headache /watering/eye-strain while doing near work/studying/watching TV .  "</string>
    <string name="symptoms_rf_error3">"Children find difficulty in reading from the blackboard when sitting in the backbenches. "</string>
    <string name="symptoms_rf_error4">"Children tend to watch TV from a close distance. "</string>
    <string name="symptoms_rf_error5">"Squeezing/frequent blinking of the eyes while watching the distant objects.  "</string>
    <string name="treatment_rf_error">What are the symptoms of presbyopia?</string>
    <string name="treatment_rf_error_point1">"Difficulty in reading, doing computer work, or reading numbers on the mobile phone."</string>
    <string name="treatment_rf_error_point2">"Difficulty in threading the needle/stitching. "</string>
    <string name="treatment_rf_error_point3">"Difficulty in cleaning pulses/rice etc. "</string>
    <string name="generalcare">General Care</string>
    <string name="setlocation">Set Screening Locations</string>
    <string name="changlang">Change Language</string>
    <string name="PATIENT_reg">"PATIENT REGISTRATION  "</string>
    <string name="middel_name">Middle Name</string>
    <string name="last_name">Last name*</string>
    <string name="dateofbirth">Date of Birth (DD/MM/YY)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age *</string>
    <string name="adharno">Aadhaar Number</string>
    <string name="hint_addres">Address line 1</string>
    <string name="help">Help</string>
    <string name="help1">Log in to the application using username and password. A new user may need to sign up first.</string>
    <string name="help2">Click on Registration to enter the demographic details of the patient.</string>
    <string name="help3">Click on Examination, select the patient to be examined.</string>
    <string name="help4">"Refer the patient if needed "</string>
    <string name="help5">"Select Awareness, Scheme, and Eyecare to provide information about eye diseases, MPJAY scheme, and general eye care respectively "</string>
</resources>