<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mRegistration"
        android:title="@string/registration"/>
    <item

        android:id="@+id/mExamination"
        android:title="@string/exam"/>

    <item
        android:id="@+id/mRefer"
        android:title="@string/referral"/>

    <item
        android:id="@+id/mAwarness"
        android:title="@string/awarness"/>

    <item
        android:id="@+id/mScheme"
        android:title="@string/scheme"/>
    <item
        android:id="@+id/mGk"
        android:title="@string/generalcare"/>

     <item
        android:id="@+id/mCamp"
        android:title="@string/setlocation"/>

    <item
        android:id="@+id/mSelectLang"
        android:title="@string/changlang"
        />
   <!-- <item
        android:id="@+id/"
        android:title="Change Language"/>-->



</menu>