<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".Registration">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:background="@color/blue"
      android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_centerVertical="true"
        android:clickable="true"
        />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:fontFamily="@font/roboto_bold"
          android:layout_marginLeft="20dp"
          android:textColor="@color/white"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/PATIENT_reg"/>
    </RelativeLayout>


  </androidx.appcompat.widget.Toolbar>

  <ScrollView
      android:layout_above="@+id/btn_add_patiant"
      android:layout_below="@+id/toolbar"
      android:layout_marginRight="15dp"
      android:layout_marginLeft="15dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fillViewport="true"
      android:layout_marginTop="10dp"

      >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


      <LinearLayout

          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <EditText
            android:layout_weight="1"
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:cursorVisible="true"
            android:hint="@string/hint_firstname"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:importantForAutofill="no"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/middle_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_bg"
            android:cursorVisible="true"
            android:drawablePadding="16dp"
            android:hint="@string/middel_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

      </LinearLayout>


      <EditText
          android:id="@+id/last_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"

          android:drawablePadding="16dp"
          android:hint="@string/last_name"
          android:inputType="textCapWords"
          android:maxLines="1"
          android:importantForAutofill="no"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <EditText
          android:visibility="gone"
          android:layout_width="match_parent"

          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"

          android:drawablePadding="16dp"
          android:hint="Registration ID: "
          android:inputType="text"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <TextView
          android:visibility="gone"
          android:id="@+id/txt_dov"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"
          android:drawablePadding="16dp"
          android:hint="Date of visit: (DD/MM/YY)  "
          android:inputType="text"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/txt_dob"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"

          android:drawablePadding="16dp"
          android:hint="@string/dateofbirth"
          android:inputType="text"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:gravity="center">

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="16dp"
            android:text="@string/gender"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

          <RadioButton
              android:id="@+id/rb_male"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginRight="20dp"
              android:checked="true"
              android:text="@string/male" />


          <RadioButton
              android:id="@+id/rb_female"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"

              android:text="@string/female" />

          <RadioButton
              android:id="@+id/rb_other"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"

              android:text="@string/other" />

        </RadioGroup>


      </LinearLayout>

      <EditText
          android:id="@+id/text_age1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"

          android:importantForAutofill="no"
          android:drawablePadding="16dp"
          android:hint="@string/age"
          android:inputType="number"
          android:maxLength="2"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />
      <EditText
          android:id="@+id/text_mobile"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:maxLength="10"
          android:importantForAutofill="no"
          android:drawablePadding="16dp"
          android:hint="@string/hint_mobile"
          android:inputType="number"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <EditText
          android:id="@+id/text_Email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"
          android:drawablePadding="16dp"
          android:importantForAutofill="no"
          android:hint="@string/adharno"
          android:inputType="number"
          android:maxLength="12"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <EditText
          android:id="@+id/text_Addresss"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"
          android:drawablePadding="16dp"
          android:hint="@string/hint_addres"
          android:importantForAutofill="no"
          android:inputType="textCapWords"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <EditText
          android:layout_width="match_parent"
          android:id="@+id/edt_pin"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"
          android:maxLength="6"
          android:drawablePadding="16dp"
          android:hint="@string/hint_pin"
          android:inputType="number"
          android:maxLines="1"
          android:importantForAutofill="no"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <EditText
          android:layout_width="match_parent"
          android:id="@+id/edt_city"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"

          android:drawablePadding="16dp"
          android:hint="@string/hint_city"
          android:inputType="textCapWords"
          android:maxLines="1"
          android:importantForAutofill="no"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <EditText
          android:layout_width="match_parent"
          android:id="@+id/txt_dist"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"
          android:importantForAutofill="no"
          android:drawablePadding="16dp"
          android:hint="@string/hint_dis"
          android:inputType="textCapWords"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />

      <EditText
          android:id="@+id/text_state"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="@drawable/rounded_bg"
          android:cursorVisible="true"
          android:importantForAutofill="no"
          android:drawablePadding="16dp"
          android:hint="@string/hint_state"
          android:inputType="textCapWords"
          android:maxLines="1"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp"
          android:paddingBottom="16dp"
          android:textColor="@color/textColor"
          android:textColorHint="@color/hintColor"
          android:textCursorDrawable="@null"
          android:textSize="16sp" />








    </LinearLayout>


  </ScrollView>




  <androidx.appcompat.widget.AppCompatButton
      android:layout_marginLeft="18dp"
      android:layout_marginRight="18dp"
      android:layout_alignParentBottom="true"
      android:id="@+id/btn_add_patiant"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:background="@color/orange"
      android:text="@string/submit"
      android:textColor="@android:color/white"
      />

</RelativeLayout>