<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityHelp">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_centerVertical="true"
            android:clickable="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="1. "
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_toRightOf="@id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="@string/help1"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="2. "
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_toRightOf="@id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="@string/help2"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="3. "
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_toRightOf="@id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="@string/help3"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="4. "
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_toRightOf="@id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="@string/help4"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="5. "
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_toRightOf="@id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/size5dp"
                android:text="@string/help5"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>